owl-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__while-stmt-empty.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(r#\"while true {}\"#)"
---
Stmt {
    kind: WhileStmt {
        condition: Expr {
            kind: BoolLit(
                true,
            ),
            span: 6..10,
        },
        body: [],
    },
    span: 0..13,
}
